
[TestInfoCmd/reports_compatibility_information - 1]
Context:
  {}
Command: |
  $ aerospace-scratchpad info
Output:
  status: success
  stdout: |
    Aerospace Scratchpad
    
    [Aerospace]
    Version: 0.4.0
    Socket: /tmp/aerospace.sock
    
    [Aerospace scratchpad]
    Workspace: .scratchpad
    
    [Compatibility]
    Status: Compatible.
             
  error: ""

---

[TestInfoCmd/reports_incompatibility_when_version_check_fails - 1]
Context:
  {}
Command: |
  $ aerospace-scratchpad info
Output:
  status: success
  stdout: |
    Aerospace Scratchpad
    
    [Aerospace]
    Version: 0.4.0
    Socket: /tmp/aerospace.sock
    
    [Aerospace scratchpad]
    Workspace: .scratchpad
    
    [Compatibility]
    Status: Incompatible. Reason: mocked incompatibility
             
  error: ""

---

[TestInfoCmd/still_prints_when_compatibility_fails_but_other_calls_error - 1]
Context:
  {}
Command: |
  $ aerospace-scratchpad info
Output:
  status: success
  stdout: |
    Aerospace Scratchpad
    
    [Aerospace]
    Version: 
    Socket: 
    
    [Aerospace scratchpad]
    Workspace: .scratchpad
    
    [Compatibility]
    Status: Incompatible. Reason: mocked incompatibility
             
  error: ""

---
